-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.1
-
None
-
-
b128c585d (master)
When editing some text with fakevim and github copilot enabled, I have the following strange issue:

As you can see when copilot autocompletion happens after pressing the change word "cw" vim command, the line is shifted to the right.
| For Gerrit Dashboard: QTCREATORBUG-29483 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 495718,2 | TextEditor: render suggestion with the tab width of the editor | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |