TextEditor: render suggestion with the tab width of the editor

Fixes: QTCREATORBUG-29483
Change-Id: Id8da019130055ce40bd639d038eb1e74d9787884
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>